FIND_PACKAGE(PkgConfig REQUIRED)
PKG_SEARCH_MODULE(GLIB2 REQUIRED glib-2.0)

ADD_EXECUTABLE(async
  EventQueue.cpp
  Notification.cpp
  Utility.cpp
  main.cpp)
TARGET_LINK_LIBRARIES(async PUBLIC ${GLIB2_LIBRARIES} pthread)
TARGET_INCLUDE_DIRECTORIES(async PUBLIC ${GLIB2_INCLUDE_DIRS})
TARGET_COMPILE_OPTIONS(async PUBLIC ${GLIB2_CFLAGS_OTHER})

